feat: spring security configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password= ragJN100Mania
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=javainuse
+#  spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:authz.pub
+ logging.level.org.springframework.security=TRACE
+ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://issuer.example.org
+#  spring.security.oauth2.resourceserver.jwt.audiences=https://cashcard.example.org
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:authz.pub
+spring.security.oauth2.resourceserver.jwt.audiences=cashcard-client
