--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "tw-watch":"npx tailwindcss -i ./src/assets/input.css -o ./src/assets/output.css --watch",
+    "tw-watch": "npx tailwindcss -i ./src/assets/input.css -o ./src/assets/output.css --watch",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -13,7 +13,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "axios": "^1.7.3",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
