--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: 17
 
       - name: build the app
-        run: ./gradlew clean build
+        run:  mvn clean build
 
       - name: login to docker hub
         uses: docker/login-action@v1
