--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: 17
 
       - name: build the app
-        run:  mvn clean install
+        run: mvn clean install
 
       - name: login to docker hub
         uses: docker/login-action@v1
@@ -37,15 +37,20 @@ jobs:
           push: true
           tags: ${{secrets.DOCKER_USERNAME}}/job-posting-app-backend:latest
 
-      - name:  Deploy to VPS
+      - name: Deploy to VPS
         env:
-          app_name: job-posting-app-backend
-        run: | 
-          sshpass -p ${{secrets.SSH_PASSWORD}} ssh -o StrictHostKeyChecking=no ${{secrets.USERNAME_AND_IP_ADDRESS}} << EOF
-          #Stop the existing container
-          docker stop "$app_name" || true
-          docker rm "$app_name" || true 
-          docker pull ${{secrets.DOCKER_USERNAME}}/"$app_name":latest
-          docker run --name "$app_name" -d -p 8080:8080 -p  \
-          ${{secrets.DOCKER_USERNAME}}/"$app_name":latest
-          EOF           
+          APP_NAME: job-posting-app-backend
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no "${{ secrets.USERNAME_AND_IP_ADDRESS }}" << 'EOF'
+          # Stop the existing container
+          docker stop "$APP_NAME" || true
+          docker rm "$APP_NAME" || true 
+          
+          # Pull the latest Docker image
+          docker pull "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
+          
+          # Run the container
+          docker run --name "$APP_NAME" -d -p 8080:8080 \
+          "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
+          EOF
+
