fix: app name is added into ssh session

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,15 +42,11 @@ jobs:
           APP_NAME: job-posting-app-backend
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no "${{ secrets.USERNAME_AND_IP_ADDRESS }}" << 'EOF'
-          # Stop the existing container
+          APP_NAME="job-posting-app-backend"
+  
           docker stop "$APP_NAME" || true
-          docker rm "$APP_NAME" || true 
-          
-          # Pull the latest Docker image
+          docker rm "$APP_NAME" || true
           docker pull "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
-          
-          # Run the container
           docker run --name "$APP_NAME" -d -p 8080:8080 \
           "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
           EOF
-
