fix: sudo command added

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no "${{ secrets.USERNAME_AND_IP_ADDRESS }}" << 'EOF'
           APP_NAME="job-posting-app-backend"
   
-          docker stop "$APP_NAME" || true
-          docker rm "$APP_NAME" || true
-          docker pull "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
-          docker run --name "$APP_NAME" -d -p 8080:8080 \
+          sudo docker stop "$APP_NAME" || true
+          sudo docker rm "$APP_NAME" || true
+          sudo docker pull "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
+          sudo docker run --name "$APP_NAME" -d -p 8080:8080 \
           "${{ secrets.DOCKER_USERNAME }}/$APP_NAME:latest"
           EOF
